fix: fix bugs